--- a/react-staging/package.json
+++ b/react-staging/package.json
@@ -37,6 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy":"http://localhost:5000"
+  }
+  // "proxy":"http://localhost:5000"//简单的配置代理
 }
