--- a/react-staging/package.json
+++ b/react-staging/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.19.3",
     "axios": "^0.21.4",
+    "babel-plugin-import": "^1.13.3",
     "craco-less": "^2.0.0",
     "nanoid": "^3.1.25",
     "prop-types": "^15.7.2",
